<resources>
    <string name="app_name">Sound Pool</string>
    <string name="para_ver">Beni övme kardeşim bana para ver</string>
    <string name="dobby_artik_ozgur">Dobby artik ozgur</string>
    <string name="efendisi_dobbye_giysiler_verdi">Efendisi dobbye giysiler verdi</string>
    <string name="efendisi_dobbye_corap_verdi">Efendisi dobbye corap verdi</string>
    <string name="parakeserizpara">Para keseriz para</string>
</resources>